# rust-actix-web-rest-api

./: .env  Cargo.toml  README.md  openapi.json
migrations/2023-05-15-001837_tabelas_inscrito_curso/: down.sql  up.sql
migrations/2023-05-15-003612_tabela_relacao_inscrito_curso/: down.sql  up.sql
migrations/2023-05-21-222241_tabelas_noticias/: down.sql  up.sql
migrations/2023-05-28-153613_tabela_evento/: down.sql  up.sql
migrations/2023-05-28-192121_tabela_atividades/: down.sql  up.sql
migrations/2023-05-28-212445_tabela_artigos/: down.sql  up.sql
src/: .main.rs.rustfmt  api_docs.rs  db.rs  main.rs  schema.rs
src/controllers/: artigo_controller.rs  atividade_controller.rs  categoria_controller.rs  curso_controller.rs  evento_controller.rs  inscrito_controller.rs  mod.rs  noticia_controller.rs
src/models/: artigo.rs  artigo_categorias.rs  atividade.rs  categoria.rs  curso.rs  evento.rs  inscrito.rs  inscrito_cursos.rs  mod.rs  noticia.rs
src/services/: artigo_service.rs  atividade_service.rs  categoria_service.rs  curso_service.rs  evento_service.rs  inscrito_service.rs  mod.rs  noticia_service.rs
